data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_596.wast
;; 7. **Test Name: No-Operation in Recursive Function Calls**    - **Description**: Add `nop` instructions within a recursive function.    - **Constraint**: Confirm that the recursion and its base cases are unaffected by `nop`.    - **Improper Handling Check**: Ensures `nop` does not interfere with recursive calls and stack states.    - **Expected Behavior**: Identical behavior in recursion depth handling and return sequences.

(assert_invalid
  (module
    (func $rec (param $n i32) (result i32)
      (local $ret i32)
      (local.set $ret (i32.const 0))
      (block
        (loop $loop
          (if (i32.eq (local.get $n) (i32.const 0))
            (br 1)
          )
          (nop)
          (local.set $n (i32.sub (local.get $n) (i32.const 1)))
          (nop)
          (local.set $ret (call $rec (local.get $n)))
          (br $loop)
        )
      )
      (local.get $ret)
    )
  )
  "type mismatch"
)